correction of media query, somethngs is not aligning here

--- a/index.css
+++ b/index.css
@@ -80,14 +80,13 @@ body {
         height: 100%;
         margin: 0;
         padding: 0;
-        overflow: hidden; 
     }
 
     .container {
         max-width: 100%;
         width: 100%;
         max-height: 100%;  
-        padding: 40px 40px;
+        padding: 20px 40px;
         border-radius: 0;
         display: flex;
         flex-direction: column;
@@ -120,7 +119,7 @@ body {
     }
 
     .container .job {
-        font-size: 1.4em;
+        font-size: 1.2em;
     }
 
     .container .short-bio {
